<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.sa.walletsa.NewTransactionActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string_add_description"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold|italic" />

        <EditText
            android:id="@+id/editTextDialogDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold"
            android:inputType="textCapWords" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string_add_date"
            android:paddingTop="@dimen/text_margin"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold|italic" />

        <EditText
            android:id="@+id/editTextDialogDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:ems="10"
            android:focusable="false"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string_add_amount"
            android:paddingTop="@dimen/text_margin"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold|italic" />

        <EditText
            android:id="@+id/editTextDialogAmount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberSigned|numberDecimal"
            android:ems="10"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold" />

        <TableRow
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:paddingTop="@dimen/text_margin"
            android:layout_weight="2" >

            <Button
                android:id="@+id/buttonDialogCancel"
                android:layout_width="0dp"
                style="?android:textAppearanceSmall"
                android:textStyle="bold"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/btn_clear" />

            <Button
                android:id="@+id/buttonDialogOK"
                android:layout_width="0dp"
                style="?android:textAppearanceSmall"
                android:textStyle="bold"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/btn_done" />
        </TableRow>

    </LinearLayout>

</ScrollView>
