<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.sa.walletsa.MainActivity"
    android:orientation="vertical"
    android:background="@color/colorMaterialBlueGrey300"
    tools:showIn="@layout/app_bar_main">

        <TextView
            android:id="@+id/textViewCurrentView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tbd"
            android:gravity="center"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textStyle="bold"
            android:textColor="@color/colorMaterialRed50"
            android:background="@color/colorMaterialBlueGrey900" />

        <TableLayout
            android:id="@+id/contents_main"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TableRow
                android:orientation="horizontal"
                android:paddingTop="3dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/textViewTitleSum"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="@string/string_total"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textStyle="bold"
                    android:background="@color/colorMaterialDeepOrange400" />

                <TextView
                    android:id="@+id/textViewSum"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="@string/tbd"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textStyle="bold"
                    android:background="@color/colorMaterialRed400" />

            </TableRow>

            <TableRow
                android:id="@+id/tableRowHeader"
                android:paddingTop="2dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/textViewTitleDescription"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="@string/string_description"
                    android:textColor="@color/colorMaterialRed50"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textStyle="bold"
                    android:background="@color/colorMaterialDeepPurple800" />

                <TextView
                    android:id="@+id/textViewTitleAmount"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="@string/string_amount"
                    android:textColor="@color/colorMaterialRed50"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textStyle="bold"
                    android:background="@color/colorMaterialIndigo700" />

            </TableRow>

            <ListView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:divider="@android:color/darker_gray"
                android:dividerHeight="1dp"
                android:drawSelectorOnTop="true"
                android:paddingTop="2dp"
                android:paddingBottom="2dp"
                android:id="@+id/listViewMainActivity" />
        </TableLayout>

</LinearLayout>
